More external links, finished Venus page

--- a/pages/earth.html
+++ b/pages/earth.html
@@ -320,6 +320,9 @@
             <h4 id="ExternalLinks">External links</h4>
             <ul>
                 <li>
+                    <a href="https://solarsystem.nasa.gov/planets/earth/overview/">https://solarsystem.nasa.gov/planets/earth/overview/</a>
+                </li>
+                <li>
                     <a href="https://en.wikipedia.org/wiki/Earth">https://en.wikipedia.org/wiki/Earth</a>
                 </li>
             </ul>
