--- a/pages/jupiter.html
+++ b/pages/jupiter.html
@@ -59,6 +59,11 @@
 
         <aside class="asideleft">
             <h2 class="asidetitle">Jupiter</h2>
+            <ul class="toc">
+                <li>
+                    <a href="#ExternalLinks">External links</a>
+                </li>
+            </ul>
         </aside>
 
         <!--Title on the main page-->
@@ -82,6 +87,15 @@
                     Ganymede is also the biggest satellite in the Solar System, bigger than the planet Mercury.
                 </p>
             </div>
+            <h4 id="ExternalLinks">External links</h4>
+            <ul>
+                <li>
+                    <a href="https://solarsystem.nasa.gov/planets/jupiter/overview/">https://solarsystem.nasa.gov/planets/jupiter/overview/</a>
+                </li>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Jupiter">https://en.wikipedia.org/wiki/Jupiter</a>
+                </li>
+            </ul>
         </section>
 
         <!--A footer-->
