--- a/pages/mars.html
+++ b/pages/mars.html
@@ -98,6 +98,9 @@
                 <li>
                     <a href="#HabitabilityAndColonisation">Habitability and colonisation</a>
                 </li>
+                <li>
+                    <a href="#ExternalLinks">External links</a>
+                </li>
             </ul>
         </aside>
 
@@ -315,6 +318,15 @@
                 NASA and CNSA both plan on sending people on Mars as early as the 2030s.
                 SpaceX, a privately held company, has proposed it's own missions to Mars with the intent of colonising and settling the <a href="planet.html">planet</a>.
             </p>
+            <h4 id="ExternalLinks">External links</h4>
+            <ul>
+                <li>
+                    <a href="https://solarsystem.nasa.gov/planets/mars/overview/">https://solarsystem.nasa.gov/planets/mars/overview/</a>
+                </li>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Mars">https://en.wikipedia.org/wiki/Mars</a>
+                </li>
+            </ul>
         </section>
 
         <!--A footer-->
