--- a/pages/mercury.html
+++ b/pages/mercury.html
@@ -194,6 +194,9 @@
             <h4 id="ExternalLinks">External links</h4>
             <ul>
                 <li>
+                    <a href="https://solarsystem.nasa.gov/planets/mercury/overview/">https://solarsystem.nasa.gov/planets/mercury/overview/</a>
+                </li>
+                <li>
                     <a href="https://en.wikipedia.org/wiki/Mercury_(planet)">https://en.wikipedia.org/wiki/Mercury_(planet)</a>
                 </li>
             </ul>
