--- a/pages/neptune.html
+++ b/pages/neptune.html
@@ -89,6 +89,9 @@
                 <li>
                     <a href="#Exploration">Exploration</a>
                 </li>
+                <li>
+                    <a href="#ExternalLinks">External links</a>
+                </li>
             </ul>
         </aside>
 
@@ -248,6 +251,15 @@
                Since the visit, Voyager 2 has left the Solar System.
                Multiple new missions were proposed, but none are yet approved.
             </p>
+            <h4 id="ExternalLinks">External links</h4>
+            <ul>
+                <li>
+                    <a href="https://solarsystem.nasa.gov/planets/neptune/overview/">https://solarsystem.nasa.gov/planets/neptune/overview/</a>
+                </li>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Neptune">https://en.wikipedia.org/wiki/Neptune</a>
+                </li>
+            </ul>
         </section>
 
         <!--A footer-->
