--- a/pages/planet.html
+++ b/pages/planet.html
@@ -312,6 +312,9 @@
             <h4 id="ExternalLinks">External links</h4>
             <ul>
                 <li>
+                    <a href="https://solarsystem.nasa.gov/planets/overview/">https://solarsystem.nasa.gov/planets/overview/</a>
+                </li>
+                <li>
                     <a href="https://en.wikipedia.org/wiki/Planet">https://en.wikipedia.org/wiki/Planet</a>
                 </li>
             </ul>
