--- a/pages/saturn.html
+++ b/pages/saturn.html
@@ -115,6 +115,9 @@
                 <li>
                     <a href="#Exploration">Exploration</a>
                 </li>
+                <li>
+                    <a href="#ExternalLinks">External links</a>
+                </li>
             </ul>
         </aside>
 
@@ -356,6 +359,15 @@
             <p class="paragraph">
                 Proposed missions include a proposed Saturn entry probe and Dragonfly, which will search for life on Titan and Enceladus.
             </p>
+            <h4 id="ExternalLinks">External links</h4>
+            <ul>
+                <li>
+                    <a href="https://solarsystem.nasa.gov/planets/saturn/overview/">https://solarsystem.nasa.gov/planets/saturn/overview/</a>
+                </li>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Saturn">https://en.wikipedia.org/wiki/Saturn</a>
+                </li>
+            </ul>
         </section>
 
         <!--A footer-->
