--- a/pages/uranus.html
+++ b/pages/uranus.html
@@ -59,6 +59,11 @@
 
         <aside class="asideleft">
             <h2 class="asidetitle">Uranus</h2>
+            <ul class="toc">
+                <li>
+                    <a href="#ExternalLinks">External links</a>
+                </li>
+            </ul>
         </aside>
 
         <!--Title on the main page-->
@@ -85,6 +90,15 @@
                     The biggest five are Titania, Oberon, Umbriel, Ariel and Miranda.
                 </p>
             </div>
+            <h4 id="ExternalLinks">External links</h4>
+            <ul>
+                <li>
+                    <a href="https://solarsystem.nasa.gov/planets/uranus/overview/">https://solarsystem.nasa.gov/planets/uranus/overview/</a>
+                </li>
+                <li>
+                    <a href="https://en.wikipedia.org/wiki/Uranus">https://en.wikipedia.org/wiki/Uranus</a>
+                </li>
+            </ul>
         </section>
 
         <!--A footer-->
