--- a/pages/venus.html
+++ b/pages/venus.html
@@ -163,7 +163,7 @@
             <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
             <h3 class="paragraphsubheader" id="Size">Size</h3>
             <p class="paragraph">
-                Venus is a terrestrial planet like <a href="mercury.html">Mercury</a>,<a href="earth.html">Earth</a> and <a href="mars.html">Mars</a>.
+                Venus is a terrestrial planet like <a href="mercury.html">Mercury</a>, <a href="earth.html">Earth</a> and <a href="mars.html">Mars</a>.
                 The diameter of Venus is 12,103.6 km - only 638.4 km less than Earth's.
                 Venus' mass is 81.5% that of Earth's.
                 Because of these similarities, it is sometimes described as Earth's twin planet.
@@ -193,7 +193,7 @@
                     Tesserae are some of the oldest surfaces on Venus.
                     Aphrodita Terra, Ishtar Terra, Beta Regio, Phoebe Regio and Alpha Regio are some of the regions where most tesserae are located.
                 </p>
-                <div class="captionbox">
+                <div class="captionbox center">
                     <img class="articleimage" src="../assets/images/maps/venus-topography-map.jpg" alt="Venus topographic map" width="1152.2" height="576">
                     <p class="caption">Topographic map of Venus, Magellan</p>
                 </div>
@@ -212,15 +212,48 @@
             </p>
             <h2 class="paragraphheader" id="EarlyObservation">Early observation</h2>
             <p class="paragraph">
+                The planet is the most prominent in the night sky, appearing as a morning and evening star.
+                It was known since ancient times and played a large role in those cultures.
+                The Maya based their calendar partially on Venus.
             </p>
-            <h2 class="paragraphheader" id="Exploration">Exploration</h2>
             <p class="paragraph">
+                Galileo Galilei observed the planet through a telescope.
+                He noticed that Venus was showing phases similar to the Moon, which would prove it's proximity to the Sun.
+                The atmosphere was discovered by Mikhail Lomonosov.
+                It was later studied by astronomers Johann Schröter and Chester Smith Lyman, who noticed the crescent shape of Venus to extend and a complete ring forming at inferion conjunction.
+                This is a result of the scattered sunlight in the atmosphere.
             </p>
+            <div class="articlediv">
+                <h2 class="paragraphheader" id="Exploration">Exploration</h2>
+                <p class="paragraph">
+                    Venus was the first planet (other than <a href="earth.html">Earth</a>) visited by spacecrafts.
+                    The first mission was the soviet Venera 1, but it lost communication on its way to the planet.
+                    Mariner 2 was the first spacecraft to successfully reach Venus, flying past it in 1962.
+                    The first to enter the atmosphere was Venera 4, which measured the surface temperature and atmosphere.
+                    The results were different from earlier missions, measuring higher temperatures and denser atmosphere than previously thought.
+                    The Venera program continued with the first soft land (Venera 7), the first photographs of the surface (Venera 9 and 10) and first color photographs (Venera 13 and 14), ending with Venera 15 and 16.
+                    VeGa 1 and 2 were soviet missions, which also studied the Halley comet during it's perihelion.
+                    Other missions have visited the planet, with one still in progress (Akatsuki).
+                    Future NASA missions VERITAS and DAVINCI+ are planned to visit the planet.
+                </p>
+                <div class="captionbox center">
+                    <img class="articleimage" src="../assets/images/other/venera-13-color-panorama.jpg" alt="Venera 13 color panorama" width="500" height="105">
+                    <p class="caption">Venera 13 color panorama of the Venusian surface</p>
+                </div>
+            </div>
             <h2 class="paragraphheader" id="Habitability">Habitability</h2>
             <p class="paragraph">
+                It is unlikely that life exists on Venus, given the extreme temperatures.
+                However, there is the possibility of microbes to exist thirty miles high in the atmosphere, where temperatures can range between 30 and 70 °C.
             </p>
             <h4 id="ExternalLinks">External links</h4>
             <ul>
+                <li>
+                    <a href="https://solarsystem.nasa.gov/planets/venus/overview/">https://solarsystem.nasa.gov/planets/venus/overview/</a>
+                </li>
+                <li>
+                    <a href="http://mentallandscape.com/V_Venus.htm">http://mentallandscape.com/V_Venus.htm</a>
+                </li>
                 <li>
                     <a href="https://en.wikipedia.org/wiki/Venus">https://en.wikipedia.org/wiki/Venus</a>
                 </li>
