--- a/pages/mercury.html
+++ b/pages/mercury.html
@@ -164,9 +164,10 @@
                     The largest crater is the 1550 km wide Caloris Basin, which is surrounded by a 2 km tall concentric ring.
                     The antipode of Caloris is a hilly terrain, likely created from the impact.
                     More recent crater feature ray systems.
+                    They appear as bright strokes radiating from the crater, fading away with time.
                 </p>
                 <p class="paragraph">
-                    At the poles, ice remains inside craters can be spotted, where shadows keep them from melting.
+                    At the poles, ice remains inside deep craters, where shadows keep them from melting.
                     The ice was most likely brought by comets.
                 </p>
                 <p class="paragraph">
@@ -187,7 +188,7 @@
                 The objectives were to explain Mercury's high density, geological history, nature of its magnetic field and structure of its core.
             </p>
             <p class="paragraph">
-                An ongoing mission between ESA and JAXA, called BepiColombo was launched in 2018.
+                An ongoing mission between ESA and JAXA, called BepiColombo, was launched in 2018.
                 It is planned to get into Mercury orbit in 2025.
                 Two probes will be released to study the planet.
             </p>
