--- a/pages/venus.html
+++ b/pages/venus.html
@@ -133,18 +133,24 @@
                     This makes the planet rotate around it's axis twice a full orbit around the Sun, the slowest of all the planets in the Solar System.
                 </p>
             </div>
-            <h2 class="paragraphheader" id="Name">Name</h2>
-            <p class="paragraph">
-                Venus is an inferior planet to Earth, so it can only be seen as a morning or an evening star.
-                In ancient Greece, the planet was referes to as Phosphorus (Φωσφόρος, "Bringer of Light"), when seen as a morning star, and Hesperus (Ἓσπερος, "Evening star"), when seen as an evening star.
-                They later identified it as a single planet, which they named "Αφροδίτη" after Aphrodite.
-                The Romans still used different names for the morning and evening star - Lucifer and Vesper, which are literal translations of the Greek names.
-                The name Venus was first used in the 13th century.
-            </p>
-            <p class="paragraph">
-                In Chinese the planet used to be referred to as "the Great White" (Tàibái, 太白) and "the Excellent West One" (Chánggēng, 長庚), for the morning and evening stars respectively.
-                Later the planet became known as "metal star" (Jīn-xīng, 金星)
-            </p>
+            <div class="articlediv">
+                <div class="captionbox right" style="width:322px;">
+                    <img class="articleimage" src="../assets/images/other/venus-sky.jpg" alt="Venus as an evening star" width="320" height="213">
+                    <p class="caption">Venus as an evening star (center right). Jupiter is seen in the top. <a href="https://commons.wikimedia.org/wiki/File:Venus_with_reflection.jpg">Source</a></p>
+                </div>
+                <h2 class="paragraphheader" id="Name">Name</h2>
+                <p class="paragraph">
+                    Venus is an inferior planet to Earth, so it can only be seen as a morning or an evening star.
+                    In ancient Greece, the planet was referes to as Phosphorus (Φωσφόρος, "Bringer of Light"), when seen as a morning star, and Hesperus (Ἓσπερος, "Evening star"), when seen as an evening star.
+                    They later identified it as a single planet, which they named "Αφροδίτη" after Aphrodite.
+                    The Romans still used different names for the morning and evening star - Lucifer and Vesper, which are literal translations of the Greek names.
+                    The name Venus was first used in the 13th century.
+                </p>
+                <p class="paragraph">
+                    In Chinese the planet used to be referred to as "the Great White" (Tàibái, 太白) and "the Excellent West One" (Chánggēng, 長庚), for the morning and evening stars respectively.
+                    Later the planet became known as "metal star" (Jīn-xīng, 金星)
+                </p>
+            </div>
             <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
             <p class="paragraph">
                 Venus orbits the Sun at an average distance of 0.72 AU and completes an orbit every 224.7 days.
@@ -159,7 +165,6 @@
                 There are no natural satellites orbiting Venus.
                 There are however seven trojans co-orbiting with Venus.
             </p>
-            <h3 class="paragraphsubheader" id="Size">Size</h3>
             <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
             <h3 class="paragraphsubheader" id="Size">Size</h3>
             <p class="paragraph">
@@ -176,6 +181,11 @@
             </p>
             <div class="articlediv">
                 <h3 class="paragraphsubheader" id="Surface">Surface</h3>
+                <p class="paragraph">
+                    The surface of Venus is 150 million years old on average.
+                    This makes it relatively new compared to other planets.
+                    This suggests a complete resurfacing of Venus.
+                </p>
                 <p class="paragraph">
                     Venus contains three highland regions (terrae) - Aphrodite Terra, Ishtar Terra and Lada Terra.
                     Aphrodite Terra is a continent near the Equator, characterised by fractures.
@@ -216,13 +226,19 @@
                 It was known since ancient times and played a large role in those cultures.
                 The Maya based their calendar partially on Venus.
             </p>
-            <p class="paragraph">
-                Galileo Galilei observed the planet through a telescope.
-                He noticed that Venus was showing phases similar to the Moon, which would prove it's proximity to the Sun.
-                The atmosphere was discovered by Mikhail Lomonosov.
-                It was later studied by astronomers Johann Schröter and Chester Smith Lyman, who noticed the crescent shape of Venus to extend and a complete ring forming at inferion conjunction.
-                This is a result of the scattered sunlight in the atmosphere.
-            </p>
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/diagrams/venus-phases.png" alt="Venus phases" width="320" height="240">
+                    <p class="caption">Venus displays phases similar to the Moon</p>
+                </div>
+                <p class="paragraph">
+                    Galileo Galilei observed the planet through a telescope.
+                    He noticed that Venus was showing phases similar to the Moon, which would prove it's proximity to the Sun.
+                    The atmosphere was discovered by Mikhail Lomonosov.
+                    It was later studied by astronomers Johann Schröter and Chester Smith Lyman, who noticed the crescent shape of Venus to extend and a complete ring forming at inferion conjunction.
+                    This is a result of the scattered sunlight in the atmosphere.
+                </p>
+            </div>
             <div class="articlediv">
                 <h2 class="paragraphheader" id="Exploration">Exploration</h2>
                 <p class="paragraph">
