--- a/pages/jupiter.html
+++ b/pages/jupiter.html
@@ -61,6 +61,52 @@
             <h2 class="asidetitle">Jupiter</h2>
             <ul class="toc">
                 <li>
+                    <a href="#Name">Name</a>
+                </li>
+                <li>
+                    <a href="#OrbitAndRotation">Orbit and rotation</a>
+                </li>
+                <li>
+                    <a href="#PhysicalCharacteristics">Physical characteristics</a>
+                    <ul class="subtoc">
+                        <li>
+                            <a href="#SizeAndMass">Size and mass</a>
+                        </li>
+                        <li>
+                            <a href="#InternalStructure">Internal structure</a>
+                        </li>
+                        <li>
+                            <a href="#Atmosphere">Atmosphere</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#Moons">Moons</a>
+                    <ul class="subtoc">
+                        <li>
+                            <a href="#Ganymede">Ganymede</a>
+                        </li>
+                        <li>
+                            <a href="#Callisto">Callisto</a>
+                        </li>
+                        <li>
+                            <a href="#Io">Io</a>
+                        </li>
+                        <li>
+                            <a href="#Europa">Europa</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#Trojans">Trojans</a>
+                </li>
+                <li>
+                    <a href="#EarlyObservations">Early observations</a>
+                </li>
+                <li>
+                    <a href="#Exploration">Exploration</a>
+                </li>
+                <li>
                     <a href="#ExternalLinks">External links</a>
                 </li>
             </ul>
@@ -80,13 +126,140 @@
                     <p class="caption">Jupiter</p>
                 </div>
                 <p class="paragraph">
-                    Jupiter is the largest planet in the Solar System and a gas giant. 
-                    It bears the name of the king of gods and god of the sky in Roman mythology. 
-                    The most recognisable feature is the storm, known as Great Red Spot. 
-                    It has a faint ring and at least 80 moons, the four main ones being Ganymede, Callisto, Io and Europe. 
-                    Ganymede is also the biggest satellite in the Solar System, bigger than the planet Mercury.
+                    Jupiter is the largest <a href="planet.html">planet</a> in the Solar System and fifth from the Sun.
+                    It is one of two gas giants, composed of hydrogen and helium, with trace amounts of methane, ammonia, ethane and water.
+                    It is named after the king of gods and god of the sky in Roman mythology, analogous to Zeus in greek mythology. 
+                </p>
+                <p class="paragraph">
+                    The most recognisable feature is the massive Great Red Spot - a long-lasting storm in the atmosphere of Jupiter. 
+                    It has a faint ring and at least 80 <a href="natural-satellite.html">moons</a>.
+                    The four main ones are Ganymede, Callisto, Io and Europe, first discoverd by Galileo in 1610. 
+                </p>
+                <p class="paragraph">
+                    Multiple spacecrafts have visited Jupiter, two of which have orbited around it.
+                    Pioneer 10 and 11, Voyager 1 and 2 and New Horizons used Jupiter's gravity for accelerating beyond it's orbits to achieve the velocity required to leave the Solar System.
+                    Juno is an ongoing mission, studying the atmosphere, deep structure and magnetosphere.
+                    Future missions include ESA's JUICE, NASA's Europa Clipper and CNSA's Tianwen-4.
                 </p>
             </div>
+            <h2 class="paragraphheader" id="Name">Name</h2>
+            <p class="paragraph">
+                Jupiter is named after the Roman god Jupiter.
+                In Greek, the planet is named after Zeus (Δίας), the greek equivalent of Jupiter.
+                It's original name in ancient Greece was Phaeton (Φαέθων, "shining one").
+            </p>
+            <p class="paragraph">
+                In Chinese, Japanese and neighboring countries the planet is refered to as "wood star" (木星).
+                In Vedic astrology, the planet is named after Brihaspati (बृहस्पति), the "guru of devas" or teacher of gods.
+            </p>
+            <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
+            <p class="paragraph">
+                Jupiter orbits 5.2 AU away from the Sun, 4.95 AU during perihelion and 5.46 AU during aphelion.
+                It takes 11.86 Earth years to complete an orbit.
+                The orbital plane of Jupiter is inclined 1.30° compared to the ecliptic and has an eccentricity of 0.049.
+            </p>
+            <p class="paragraph">
+                Jupiter's axial tilt is only 3.13°.
+                Jupiter rotates the fastest of all the planets, completing a rotation in ten hours on average.
+                This makes the planet more flattened than other planets at 6.8% flattening, with only <a href="saturn.html">Saturn</a> having a higher percent.
+                Just like other giants, Jupiter observes a differential rotation.
+                The Jovian poles rotate slower, rotating 5 minutes longer than the equator.
+            </p>
+            <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
+            <h3 class="paragraphsubheader" id="SizeAndMass">Size and mass</h3>
+            <p class="paragraph">
+                Jupiter is the largest planet in the Solar System.
+                It has a diameter 11.2 times that of <a href="earth.html">Earth</a> and one tenth of the Sun.
+                <a href="exoplanet.html">Exoplanets</a> that are gas giants are similar to Jupiter and are therefore called "Jupiters".
+                A "hot Jupiter" is a class of gas giant exoplanets that orbit close to the Sun, examples include Dimidium (51 Pegassi b), WASP-12b, HD 209458 b and WASP-19b.
+            </p>
+            <h3 class="paragraphsubheader" id="InternalStructure">Internal structure</h3>
+            <p class="paragraph">
+                Jupiter is composed of hydrogen and helium, with trace amounts of ammonia, methane and water.
+            </p>
+            <h3 class="paragraphsubheader" id="Atmosphere">Atmosphere</h3>
+            <p class="paragraph">
+                In the atmosphere, helium makes up 10% of the volume, but 25% of the mass.
+            </p>
+            <h2 class="paragraphheader" id="Moons">Moons</h2>
+            <p class="paragraph">
+                Jupiter has four gravitationally rounded <a href="natural-satellite.html">moons</a> - Ganymede, Callisto, Io and Europa. 
+                They were discovered by Galileo Galilei in 1610 and are called Galilean moons. 
+                Ganymede is the largest known satellite and is bigger than <a href="mercury.html">Mercury</a>. 
+                All but Europa are larger than Earth's Moon. 
+                Io, Europa and Ganymede are in a 4:2:1 orbital resonance with each other.
+            </p>
+            <p class="paragraph">
+                76 other moons are known to orbit Jupiter. 
+                Just like the four Galilean moons, the rest are assigned names of lovers of Zeus (Greek equivalent of Jupiter) and later their descendants. 
+                They are significantly smaller than the Galilean moons. 
+                The biggest of them is Amalthea, and the most massive is Himalia.
+            </p>
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/natural-satellites/ganymede.jpg" alt="Ganymede" width="180" height="180">
+                    <p class="caption">Ganymede</p>
+                </div>
+                <h3 class="paragraphsubheader" id="Ganymede">Ganymede</h3>
+                <p class="paragraph">
+                    Ganymede is the largest known satellite in the Solar System.
+                    It is larger than the planet <a href="mercury.html">Mercury</a>, but is less massive.
+                    The Hubble Space Telescope has discovered evidence for underground saltwater ocean.
+                    It has a magnetic field, the only satellite known to have such.
+                    The magnetic field is likely affected by the interior ocean.
+                    The future ESA mission JUICE is planned to orbit Ganymede and study the satellite.
+                </p>
+            </div>
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/natural-satellites/callisto.jpg" alt="Callisto" width="174" height="180">
+                    <p class="caption">Callisto</p>
+                </div>
+                <h3 class="paragraphsubheader" id="Callisto">Callisto</h3>
+                <p class="paragraph">
+                    Callisto is the second biggest of the Galilean moons.
+                    The surface is heavily cratered, covered with craters and white icy spots.
+                    The Galileo spacecraft gathered data from Callisto that shows the possibility of an interior ocean.
+                </p>
+            </div>
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/natural-satellites/io.jpg" alt="Io" width="180" height="180">
+                    <p class="caption">Io</p>
+                </div>
+                <h3 class="paragraphsubheader" id="Io">Io</h3>
+                <p class="paragraph">
+                    Io is a satellite of Jupiter that is slightly larger than Earth's Moon.
+                    It is volcanically active and has hundreds of volcanoes.
+                    The activity of Io is caused by the gravitational pull of Jupiter on one side and Ganymede and Europa on the other side.
+                    Together these three satellites are in a orbital resonance with each other.
+                    Volcano eruptions can be so powerful that Earth telescopes can see them.
+                </p>
+            </div>
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/natural-satellites/europa.jpg" alt="Europa" width="180" height="180">
+                    <p class="caption">Europa</p>
+                </div>
+                <h3 class="paragraphsubheader" id="Europa">Europa</h3>
+                <p class="paragraph">
+                    Europa is the smallest Galilean moon and is slightly smaller than Earth's Moon.
+                    It is an icy moon with a smooth surface full of dark streaks.
+                    It is speculated that Europa could have a subsurface ocean where extraterrestrial life could exist.
+                    This is similar to Ganymede and Callisto, but there are more evidences showing such ocean on Europa than on the other two moons.
+                    A similar satellite is <a href="saturn.html">Saturn</a>'s moon Enceladus.
+                    NASA is planning to launch the orbiter Europa Clipper in 2024 to study the Europan surface.
+                </p>
+            </div>
+            <h2 class="paragraphheader" id="Trojans">Trojans</h2>
+            <p class="paragraph">
+            </p>
+            <h2 class="paragraphheader" id="EarlyObservations">Early observations</h2>
+            <p class="paragraph">
+            </p>
+            <h2 class="paragraphheader" id="Exploration">Exploration</h2>
+            <p class="paragraph">
+            </p>
             <h4 id="ExternalLinks">External links</h4>
             <ul>
                 <li>
