--- a/pages/star.html
+++ b/pages/star.html
@@ -83,7 +83,7 @@
                     <p class="caption">The Sun, a G-type star</p>
                 </div>
                 <p class="paragraph">
-                    A star is a celestial body than consists of plasma held by it's gravity and emits light. 
+                    A star is a celestial body that consists of plasma held by it's gravity and emits light. 
                     The Sun is the closest star to <a href="earth.html">Earth</a>. 
                     There are an estimated 10^22 to 10^24 stars in the universe, but only around 4,000 can be seen with the naked eye.
                 </p>
