Finished Jupiter page

--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -165,11 +165,11 @@
                     Of the four, Europa is the only one that is smaller than Earth's Moon. 
                     Io, Europa and Ganymede are in a 4:2:1 orbital resonance with each other.
                 </p>
-                <div class="captionbox center">
+                <div class="captionbox center" style="width:722px;">
                     <img class="articleimage" src="../assets/images/natural-satellites/ganymede.jpg" alt="Ganymede" width="180" height="180">
                     <img class="articleimage" src="../assets/images/natural-satellites/callisto.jpg" alt="Callisto" width="174" height="180">
                     <img class="articleimage" src="../assets/images/natural-satellites/io.jpg" alt="Io" width="180" height="180">
-                    <img class="articleimage" src="../assets/images/natural-satellites/europa.jpg" alt="Europa" width="180" height="180">
+                    <img class="articleimage" src="../assets/images/natural-satellites/europa.png" alt="Europa" width="180" height="180">
                     <p class="caption">The four Galilean moons - Ganymede, Callisto, Io and Europa</p>
                 </div>
                 <p class="paragraph">
