--- a/pages/planet.html
+++ b/pages/planet.html
@@ -112,8 +112,10 @@
         <!--The main page article-->
 
         <section class="maincontent">
-            <p class="paragraph">Planets are round astronomical bodies, smaller than <a href="star.html">stars</a>.</p>
-            <p class="paragraph">According to the IAU, a planet is a celestial body that:</p>
+            <p class="paragraph">
+                Planets are round astronomical bodies, smaller than <a href="star.html">stars</a>.
+               According to the IAU, a planet is a celestial body that:
+            </p>
             <ol class="paragraph">
                 <li>is in orbit around the Sun,</li>
                 <li>has sufficient mass so it assumes hydrostatic equilibrium (to be nearly round) and</li>
@@ -129,7 +131,7 @@
                 The <a href="natural-satellite.html">satellites</a> of planets like Earth's Moon, or the Jovian, Saturnian, Uranian and Neptunian moons were also considered planets for some time.
             </p>
             <p class="paragraph">
-                The same can be said for the asteroids in the <a href="asteroid-belt.html">Asteroid Belti</a>, or objects like Pluto. 
+                The same can be said for the asteroids in the <a href="asteroid-belt.html">Asteroid Belt</a>, or objects like Pluto. 
                 The biggest asteroid - Ceres, the <a href="tno.html">Trans-Neptunian objects</a> Pluto, Eris, Haumea, Makemake and many more are called dwarf planets. 
                 The difference is that unlike regular planets, dwarf planets do not make up the majority of the mass in their orbit.
             </p>
