--- a/pages/jupiter.html
+++ b/pages/jupiter.html
@@ -78,6 +78,9 @@
                         <li>
                             <a href="#Atmosphere">Atmosphere</a>
                         </li>
+                        <li>
+                            <a href="#Rings">Rings</a>
+                        </li>
                     </ul>
                 </li>
                 <li>
@@ -121,9 +124,9 @@
 
         <section class="maincontent">
             <div class="articlediv">
-                <div class="captionbox right">
+                <div class="captionbox right" style="width:242px;">
                     <img class="articleimage" src="../assets/images/planets/jupiter.jpg" alt="Jupiter" width="240" height="240">
-                    <p class="caption">Jupiter</p>
+                    <p class="caption">Jupiter, seen by NASA's Hubble Space Telescope</p>
                 </div>
                 <p class="paragraph">
                     Jupiter is the largest <a href="planet.html">planet</a> in the Solar System and fifth from the Sun.
@@ -152,34 +155,66 @@
                 In Chinese, Japanese and neighboring countries the planet is refered to as "wood star" (木星).
                 In Vedic astrology, the planet is named after Brihaspati (बृहस्पति), the "guru of devas" or teacher of gods.
             </p>
-            <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
-            <p class="paragraph">
-                Jupiter orbits 5.2 AU away from the Sun, 4.95 AU during perihelion and 5.46 AU during aphelion.
-                It takes 11.86 Earth years to complete an orbit.
-                The orbital plane of Jupiter is inclined 1.30° compared to the ecliptic and has an eccentricity of 0.049.
-            </p>
-            <p class="paragraph">
-                Jupiter's axial tilt is only 3.13°.
-                Jupiter rotates the fastest of all the planets, completing a rotation in ten hours on average.
-                This makes the planet more flattened than other planets at 6.8% flattening, with only <a href="saturn.html">Saturn</a> having a higher percent.
-                Just like other giants, Jupiter observes a differential rotation.
-                The Jovian poles rotate slower, rotating 5 minutes longer than the equator.
-            </p>
+            <div class="articlediv">
+                <div class="captionbox right" style="width:197px;">
+                    <img class="articleimage" src="../assets/images/other/jupiter-timelapse.gif" alt="Jupiter timelapse" width="195" height="200">
+                    <p class="caption">Timelapse of Jupiter over a month</p>
+                </div>
+                <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
+                <p class="paragraph">
+                    Jupiter orbits 5.2 AU away from the Sun, 4.95 AU during perihelion and 5.46 AU during aphelion.
+                    It takes 11.86 Earth years to complete an orbit.
+                    The orbital plane of Jupiter is inclined 1.30° compared to the ecliptic and has an eccentricity of 0.049.
+                </p>
+                <p class="paragraph">
+                    Jupiter's axial tilt is only 3.13°.
+                    Jupiter rotates the fastest of all the planets, completing a rotation in ten hours on average.
+                    This makes the planet more flattened than other planets at 6.8% flattening, with only <a href="saturn.html">Saturn</a> having a higher percent.
+                    Just like other giants, Jupiter observes a differential rotation.
+                    The Jovian poles rotate slower, rotating 5 minutes longer than the equator.
+                </p>
+            </div>
             <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
             <h3 class="paragraphsubheader" id="SizeAndMass">Size and mass</h3>
             <p class="paragraph">
                 Jupiter is the largest planet in the Solar System.
                 It has a diameter 11.2 times that of <a href="earth.html">Earth</a> and one tenth of the Sun.
-                <a href="exoplanet.html">Exoplanets</a> that are gas giants are similar to Jupiter and are therefore called "Jupiters".
-                A "hot Jupiter" is a class of gas giant exoplanets that orbit close to the Sun, examples include Dimidium (51 Pegassi b), WASP-12b, HD 209458 b and WASP-19b.
+                <a href="exoplanet.html">Exoplanets</a> that are gas giants, are similar to Jupiter and are therefore called "Jupiters".
+                A "hot Jupiter" is a class of gas giant exoplanets that orbit close to their host <a href="star.html">star</a>, examples include Dimidium (51 Pegassi b), WASP-12b, HD 209458 b and WASP-19b.
             </p>
             <h3 class="paragraphsubheader" id="InternalStructure">Internal structure</h3>
             <p class="paragraph">
                 Jupiter is composed of hydrogen and helium, with trace amounts of ammonia, methane and water.
+                In the atmosphere, helium makes up 10% of the volume, but a quarter of the mass.
+                Deep inside the planet, the mantle is composed of metallic hydrogen, which contributes to the strong magnetosphere of Jupiter.
+                Data collected by the Juno spacecraft suggests that Jupiter has a large and partially dissolved core.
             </p>
-            <h3 class="paragraphsubheader" id="Atmosphere">Atmosphere</h3>
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/features/jupiter-great-red-spot.jpg" alt="Great Red Spot" width="320" height="209">
+                    <p class="caption">The Great Red Spot, image captured by Juno</p>
+                </div>
+                <h3 class="paragraphsubheader" id="Atmosphere">Atmosphere</h3>
+                <p class="paragraph">
+                    Jupiter has a very dynamic atmosphere full of storms, clouds and differently colored bands.
+                    The clouds at the top layers are possibly crystalline ammonia, the middle layer is likely made of ammonium hydrosulfide crystals and the innermost layer may be made of water ice and vapor.
+                    The colorful stripes on Jupiter are quickly spinning streams of clouds.
+                    Different, but exactly unknown compounds give the storms the red, white and yellow colors.
+                </p>
+                <p class="paragraph">
+                    Storms on Jupiter are long lasting vortices.
+                    The most well-known is the Great Red Spot, a persistent anticyclonic storm located 22° south of the equator.
+                    The storm has existed for at least 191 years.
+                    Since it's discovery, the storm has shrunk in size.
+                    Other storms include a series of "pearls" - massive counterclockwise rotating storms that appear as white ovals in the southern hemisphere.
+                    Since 1986, the ovals have varied in number from six to nine.
+                </p>
+            </div>
+            <h3 class="paragraphsubheader" id="Rings">Rings</h3>
             <p class="paragraph">
-                In the atmosphere, helium makes up 10% of the volume, but 25% of the mass.
+                Jupiter has a faint planetary ring system composed of three main segments: an inner "halo", a relatively bright main ring and outer faint rings.
+                These rings appear to be made of dust, similar to the rings of <a href="neptune.html">Neptune</a>.
+                The main ring is created by the satellites Metis and Adrastea, while the outer ones are shaped by Amalthea and Thebe.
             </p>
             <h2 class="paragraphheader" id="Moons">Moons</h2>
             <p class="paragraph">
@@ -238,7 +273,7 @@
             </div>
             <div class="articlediv">
                 <div class="captionbox right">
-                    <img class="articleimage" src="../assets/images/natural-satellites/europa.jpg" alt="Europa" width="180" height="180">
+                    <img class="articleimage" src="../assets/images/natural-satellites/europa.png" alt="Europa" width="180" height="180">
                     <p class="caption">Europa</p>
                 </div>
                 <h3 class="paragraphsubheader" id="Europa">Europa</h3>
@@ -253,13 +288,70 @@
             </div>
             <h2 class="paragraphheader" id="Trojans">Trojans</h2>
             <p class="paragraph">
+                A large group of asteroids co-orbits with Jupiter, named trojans.
+                These asteroids are divided in two groups - the Greek camp, lying around the leading Lagrange point (L4), and the Trojan camp, lying around the trailing Lagrange point (L5).
+                The Greek camp includes 7508 known trojans, the biggest of which are 624 Hektor, 911 Agamemnon and 588 Achilles.
+                On the other hand, the Trojan camp has 4044 known asteroids, the biggest of which are 617 Patroclus-Menoetius, 3451 Mentor and 3317 Paris.
+            </p>
+            <p class="paragraph">
+                Other planets, with the exception of <a href="mercury.html">Mercury</a> and <a href="saturn.html">Saturn</a>, also have their own co-orbiting asteroids.
+                They are also named trojans after the Jovian trojans.
+                These planets have considerably less trojans than Jupiter.
+                <a href="earth.html">Earth</a> has two known trojans - 2010 TK7 and 2020 XL5.
+            </p>
+            <p class="paragraph">
+                Another group of asteroids, that are influenced by Jupiter's gravity well is the Hilda asteroids, named after the asteroid 153 Hilda.
+                They are located outside the <a href="asteroid-belt.html">asteroid belt</a> and within Jupiter's orbit.
+                Their aphelion reaches any of three Lagrange point (L5, L4 and L3) in a sequence.
             </p>
             <h2 class="paragraphheader" id="EarlyObservations">Early observations</h2>
             <p class="paragraph">
+                Jupiter is known since ancient times.
+                It is the second brightest planet in the night sky after <a href="venus.html">Venus</a>.
+                In 1610, Galileo Galilei discovered the four biggest moons of Jupiter - the Galilean moons.
+                Names were given by the astronomer Simon Marius - Io, Europa, Ganymede and Callisto.
+                Giovanni Cassini was the first to observe the atmosphere of Jupiter, discovering the bands and storms that form.
+                In 1892, the american astronomer E. E. Barnard discovered a fifth moon - Amalthea.
+                Eight other moons were discovered before the launch of the Voyager 1 spacecraft.
             </p>
-            <h2 class="paragraphheader" id="Exploration">Exploration</h2>
-            <p class="paragraph">
-            </p>
+            <div class="articlediv">
+                <div class="captionbox right">
+                    <img class="articleimage" src="../assets/images/spacecrafts/juno-orbiter.png" alt="Juno" width="225" height="240">
+                    <p class="caption">Model of NASA's spacecraft Juno</p>
+                </div>
+                <h2 class="paragraphheader" id="Exploration">Exploration</h2>
+                <p class="paragraph">
+                    Multiple spacecrafts have visited Jupiter, two of which have orbited around it.
+                    The missions that were aimed at reaching the outer Solar System used Jupiter's gravity for accelerating beyond it's orbits, achieving the needed velocity to leave the Solar System.
+                    First to reach Jupiter was Pioneer 10, followed by Pioneer 11 one year later.
+                    The two spacecrafts made the first close-up images of Jupiter.
+                    Voyager 1 and 2 discovered Jupiter's rings, observed the Galilean moons and found a few moons.
+                    Ulysses, a solar probe, performed a flyby around Jupiter to attain a polar orbit around the Sun.
+                    The Cassini-Huygens passed Jupiter on it's way to the Saturn system.
+                    The last to fly by Jupiter was New Horizons, a mission aimed at visiting Pluto.
+                </p>
+                <p class="paragraph">
+                    Galileo was the first Jupiter orbiter.
+                    It studied the system and it's moons for seven years, until it's intentional destruction.
+                    An atmospheric probe was released into Jupiter to determine the atmospheric composition.
+                    It also witnessed the impact of the comet Shoemaker-Levy 9 with Jupiter.
+                </p>
+                <p class="paragraph">
+                    Juno is the follow-up mission of Galileo.
+                    It is the second New Frontiers mission after New Horizons.
+                    It's target was gathering further information about Jupiter.
+                    The mission is currently extended and will end in 2025, meeting the same fate as Galileo.
+                </p>
+                <p class="paragraph">
+                    Future missions are mostly aimed at Jupiter's moons.
+                    The Jupiter Icy Moons Explorer, a program developed by the ESA, is planned to launch in 2024.
+                    It will perform several flybys around Jupiter and the moons Europa, Ganymede and Callisto.
+                    The last objective is to enter orbit around the biggest moon Ganymede.
+                    NASA plans to launch the Europa Clipper in the same year.
+                    The objective is to study Europa, mainly because of it's potential life suspected to inhabit an internal ocean.
+                    CNSA is preparing for launching Tianwen-4 in 2029 with the mission to study the Jovian magnetosphere and atmosphere, as well as Ganymede or Callisto.
+                </p>
+            </div>
             <h4 id="ExternalLinks">External links</h4>
             <ul>
                 <li>
@@ -267,6 +359,9 @@
                 </li>
                 <li>
                     <a href="https://en.wikipedia.org/wiki/Jupiter">https://en.wikipedia.org/wiki/Jupiter</a>
+                </li>
+                <li>
+                    <a href="https://www.space.com/37005-jupiter-fuzzy-core-nasa-juno.html">https://www.space.com/37005-jupiter-fuzzy-core-nasa-juno.html</a>
                 </li>
             </ul>
         </section>
