--- a/pages/neptune.html
+++ b/pages/neptune.html
@@ -78,6 +78,9 @@
                         <li>
                             <a href="#InternalStructureAndAtmosphere">Internal structure and atmosphere</a>
                         </li>
+                        <li>
+                            <a href="#Rings">Rings</a>
+                        </li>
                     </ul>
                 </li>
                 <li>
@@ -196,6 +199,12 @@
                 Water molecules break down into hydrogen and oxygen ions and rains of diamonds are formed from methane under the high pressure
                 The core is likely a supercritical fluid mix of iron, nickel and silicates, 1.2 times more massive than Earth.
             </p>
+            <h3 class="paragraphsubheader" id="Rings">Rings</h3>
+            <p class="paragraph">
+                Neptune has five rings. 
+                They are faint and composed of dust, similar to those of Jupiter.
+                The five rings bear the names of scientist that played a role in the discovery and observation of Neptune - Galle, Le Verrier, Lassell, Arago, and Adams.
+            </p>
             <div class="articlediv">
                 <div class="captionbox right" style="width:263px;">
                     <img class="articleimage" src="../assets/images/features/neptune-spots.jpg" alt="Neptune spots" width="261" height="240">
@@ -235,11 +244,6 @@
                     Naiad, Thalassa, Despina and Galatea are within the rings of Neptune.
                     Larissa was the last discovered in 1989.
                     Since then six more moons were discovered in 2003, 2004 and 2013.
-                </p>
-                <p class="paragraph">
-                    Neptune has five rings. 
-                    They are faint and composed of dust, similar to those of Jupiter.
-                    The five rings bear the names of scientist that played a role in the discovery and observation of Neptune - Galle, Le Verrier, Lassell, Arago, and Adams.
                 </p>
             </div>
             <h2 class="paragraphheader" id="Exploration">Exploration</h2>
